// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npcPageBuilder should build monster infobox with combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[20 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 100
|size = 2
|hitpoints = 100
|att = 200
|def = 300
|mage = 400
|range = 500
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''"
`;

exports[`npcPageBuilder should build npc infobox without combat level 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[20 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = 1
}}
[[File:name chathead.png|left]]
'''name'''"
`;

exports[`npcPageBuilder should use beta id when Context.beta is true 1`] = `
"{{New Content}}
{{Infobox Monster
|name = name
|image = [[File:name.png|120px]]
|release = [[20 March]] [[2024]]
|update = Varlamore: Part One
|members = Yes
|combat = 1
|id = beta1
}}
[[File:name chathead.png|left]]
'''name'''"
`;
